<resources>
    <string name="app_name">Project 2</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_message_text">Sample Text</string>
    <string name="incorrect_user_cred_text">Incorrect Username or Password</string>
    <string name="log_in_success_text">YAY You Logged In!</string>
    <string name="create_an_account">Create An Account</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="sign_up_password_error">Type Password Correctly Twice</string>
    <string name="back">Back</string>
    <string name="admin">Admin</string>
    <string name="admin_text_radio">Admin</string>
    <string name="user_text_radio">User</string>
    <string name="sign_up_radio_error">Select Admin or User</string>
    <string name="sign_up_username_error">Username is taken</string>
    <string name="home_page">Home Page</string>
    <string name="book_flight">Book Flight</string>
    <string name="admin_actions">Admin Actions</string>
    <string name="bookings_table_title">Bookings</string>
    <string name="placeholder_add_later">Placeholder, add later</string>
    <string name="log_out">Log Out</string>
    <string name="admin_actions_banner">Admin Actions Page</string>
    <string name="flight_list">Flight List</string>
    <string name="add_flight">Add Flight</string>
    <string name="edit_flight">Edit Flight</string>
    <string name="enter_flight_number">Enter Flight Number</string>
    <string name="edit_flight_number_error">Invalid Flight Number</string>
    <string name="enter_flight_origin">Enter Flight Origin</string>
    <string name="adding_flight_page">Adding Flight Page</string>
    <string name="add_flight_error_not_unique">Enter a unique flight number!</string>
    <string name="add_flight_error_no_flight_number">Please enter a flight number!</string>
    <string name="add_flight_error_flight_number_length">Flight Number of invalid Length</string>
    <string name="add_flight_error_no_origin">Please enter a flight origin!</string>
    <string name="add_flight_error_no_destination">Please enter a flight destination!</string>
    <string name="enter_flight_destination">Enter Flight Destination</string>
    <string name="editing_flight_page">Editing Flight Page</string>
    <string name="remove_flight">Remove Flight</string>
    <string name="remove_flight_from_availability">Remove Flight From Availability</string>
    <string name="keep_flight_in_availability">Keep Flight In Availability</string>
    <string name="flight_booking_page">Flight Booking Page</string>
    <string name="no_flights_available">No Flights Available</string>
    <string name="enter_number_of_bookings">Enter number of Bookings</string>
    <string name="book_flight_error_no_booking_amount">Please Enter Number of Bookings!</string>
    <string name="book_flight_error_booking_amount_too_big">Booking Amount Does Not Fit Flight Capacity!</string>
    <string name="book_flight_error_zero_amount">Please Enter an Amount More Than Zero!</string>
    <string name="remove">Remove</string>
    <string name="enter_city">Enter City</string>
    <string name="search_flights">Search Flights</string>
    <string name="book_flight_error_no_city">Please Enter a City!</string>
    <string name="book_flight_error_invalid_city">Invalid City!</string>
    <string name="arrivals">Arrivals</string>
    <string name="departures">Departures</string>
    <string name="delete_user">Delete User?</string>
</resources>